styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  text-align: center;
}

.scoreboard-section {
  margin-bottom: 1.563em;
}

.container {
  width: 80%;
  max-width: 1100px;
  margin: 0 auto;
}

.scoreboard {
  display: flex;
  justify-content: center;
  gap: 6.25em;
}

.player-container {
  width: 140px;
}

.computer-container {
  width: 140px;
}

.player-scoreBoard {
  border: 4px solid black;
}

.computer-scoreBoard {
  border: 4px solid black;
}

.row {
  display: flex;
  justify-content: center;
}

h2 {
  margin-bottom: 1.563em;
}

.game-buttons {
  display: flex;
  justify-content: center;
  gap: 4.688em;
  margin-bottom: 1.563em;
}

button {
  padding: 3.125rem;
  border-radius: 50%;
  border: none;
  outline: none;
  background-color: lightgray;
  cursor: pointer;
  font-size: 2.5rem;
  color: orange;
}

.hide {
  display: none;
}

.result {
  margin-top: 1.563em;
}

@media (max-width: 600px) {
  .game-buttons {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 4.688em;
    margin-bottom: 1.563em;
  }
}

